crates/rspack_loader_swc/src/rsc_transforms/tests/fixture/errors/server-actions/server-graph/8/output.js
import { registerServerReference } from "react-server-dom-rspack/server";
export const $$RSC_SERVER_ACTION_0 = async function foo() {
    'use strict';
};
registerServerReference($$RSC_SERVER_ACTION_0, "00d7300b3a327ac30acf7f3331539670b902e44a4fa90021b9bb918e6741e18e80", null);
const foo = $$RSC_SERVER_ACTION_0;
const bar = async ()=>{
    const x = 1;
    // prettier-ignore
    'use server';
};
